--- a/app/src/main/res/drawable/image_placeholder.xml
+++ b/app/src/main/res/drawable/image_placeholder.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
         android:angle="270"
-        android:endColor="#E0E0E0"
-        android:startColor="#FFFFFF" />
+        android:endColor="#ffe76d"
+        android:startColor="#F9F1CD" />
 </shape>
